--- a/awesome_events/app/views/layouts/application.html.haml
+++ b/awesome_events/app/views/layouts/application.html.haml
@@ -16,4 +16,7 @@
           %li.nav-item
             = link_to "GitHubでログイン", "/auth/github", class: "nav-link", method: :post
     .container
+      - if flash.notice
+        .alert.alert-success
+          = flash.notice
       = yield
