Add connection query to Logout link to when connection query exists in top page

--- a/auth0-on-rails/app/views/root/index.html.erb
+++ b/auth0-on-rails/app/views/root/index.html.erb
@@ -3,4 +3,4 @@
 <% end %>
 
 <%= button_to 'Login', '/auth/auth0', method: :post, params: { connection: params['connection'] } %>
-<%= button_to 'Logout', 'auth/logout', method: :get %>
+<%= button_to 'Logout', 'auth/logout', method: :get, params: { connection: params['connection'] } %>
