--- a/intern_diary/app/views/entries/edit.html.erb
+++ b/intern_diary/app/views/entries/edit.html.erb
@@ -5,6 +5,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this entry", [:users, @entry] %> |
-  <%= link_to "Back to entries", users_entries_path %>
+  <%= link_to "Show this entry", entry_path(@entry) %> |
+  <%= link_to "Back to entries", entries_path %>
 </div>
