Add title and body to new entry form

--- a/intern_diary/app/views/entries/_form.html.erb
+++ b/intern_diary/app/views/entries/_form.html.erb
@@ -11,6 +11,17 @@
     </div>
   <% end %>
 
+
+  <p>
+    <%= form.label :title %>
+    <%= form.text_field :title %>
+  </p>
+
+  <p>
+    <%= form.label :body %>
+    <%= form.text_area :body %>
+  </p>
+
   <div>
     <%= form.submit %>
   </div>
