Pass form_url to _form.html.erb explicitly to specify params[:username]

--- a/intern_diary/app/views/entries/edit.html.erb
+++ b/intern_diary/app/views/entries/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing entry</h1>
 
-<%= render "form", entry: @entry %>
+<%= render "form", entry: @entry, form_url: entry_path(params[:username], @entry.id) %>
 
 <br>
 
